new_tests/semantics/type/bad/077_CD5.cm

class A<discr t, scalar e> {}

def a:A<Int,Bool> = new A() 
